--- a/public/500.html
+++ b/public/500.html
@@ -4,63 +4,89 @@
   <title>We're sorry, but something went wrong (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  .error-page{
+  background: #000;
+  font-family: cursive;
+  margin: 0 auto; 
+}
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+svg {
+    font: 10.5em 'Monoton';
+    width: 100vw;
+    height: 100vh;
+}
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+.content{
+  text-align: center;
+}
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+.title-error{
+  text-align: center;
+  font: 2em 'Novar', sans-serif;
+  font-weight: bold;
+  color: #dadf9b;
+  opacity: .6;
+}
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
+.text {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 8% 29%;
+    stroke-width: 5px;
+    stroke-dashoffset: 1%;
+    animation: stroke-offset 5.5s infinite linear;
+}
+
+.text:nth-child(1){
+	stroke: #fff5c0;
+	animation-delay: -1;
+}
+
+.text:nth-child(2){
+	stroke: #dee8eb;
+	animation-delay: -2s;
+}
+
+.text:nth-child(3){
+	stroke: #ffe8e8;
+	animation-delay: -3s;
+}
+
+.text:nth-child(4){
+	stroke: #ddf5dd;
+	animation-delay: -4s;
+}
+
+.text:nth-child(5){
+	stroke: #cec1e7;
+	animation-delay: -5s;
+}
+
+@keyframes stroke-offset{
+	100% {
+    stroke-dashoffset: -35%;
   }
+}
   </style>
 </head>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
+<body class="error-page">
+  <!-- This file lives in public/404.html -->
+  <div class="content">
+    <svg viewBox="0 0 960 300">
+      <symbol id="s-text">
+        <text text-anchor="middle" x="50%" y="50%">500</text>
+      </symbol>
+    
+      <g class = "g-ants">
+        <use xlink:href="#s-text" class="text"></use>
+        <use xlink:href="#s-text" class="text"></use>
+        <use xlink:href="#s-text" class="text"></use>
+        <use xlink:href="#s-text" class="text"></use>
+        <use xlink:href="#s-text" class="text"></use>
+      </g>
+    </svg>    
+    <h1 class="title-error">We're sorry, but something went wrong.</h1>
   </div>
 </body>
 </html>
